Minor updates to Lab4.

--- a/Labs/Lab4/Lab4.ipynb
+++ b/Labs/Lab4/Lab4.ipynb
@@ -32,7 +32,7 @@
     {
      "data": {
       "text/html": [
-       "<style>div.exercise { background-color: #ffcccc;border-color: #E9967A; border-left: 5px solid #800080; padding: 0.5em;}</style>"
+       "<style>div.exercise { background-color: #ffcccc;border-color: #E9967A;      border-left: 5px solid #800080; padding: 0.5em;} h2 {padding-top: 25px; padding-bottom:     25px; padding-left: 10px; background-color: #DDDDDD; color: black; }</style>"
       ],
       "text/plain": [
        "<IPython.core.display.HTML object>"
@@ -45,7 +45,9 @@
    ],
    "source": [
     "from IPython.display import HTML\n",
-    "style = \"<style>div.exercise { background-color: #ffcccc;border-color: #E9967A; border-left: 5px solid #800080; padding: 0.5em;}</style>\"\n",
+    "style = \"<style>div.exercise { background-color: #ffcccc;border-color: #E9967A;  \\\n",
+    "    border-left: 5px solid #800080; padding: 0.5em;} h2 {padding-top: 25px; padding-bottom: \\\n",
+    "    25px; padding-left: 10px; background-color: #DDDDDD; color: black; }</style>\"\n",
     "HTML(style)"
    ]
   },
@@ -53,14 +55,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Table of Contents\n",
+    "## Table of Contents\n",
     "<ol start=\"0\">\n",
     "  <li> Learning Goals </li>\n",
     "  <li> Review of regularized regression </li>\n",
     "  <li> Ridge regression with one predictor on a grid </li>\n",
     "  <li> Ridge regression with polynomial features on a grid</li>\n",
     "  <li> Cross-validation --- Multiple Estimates </li>\n",
-    "  <li> Cross-validation --- Finding the best penalization parameter </li>\n",
+    "  <li> Cross-validation --- Finding the best regularization parameter </li>\n",
     "</ol>"
    ]
   },
@@ -69,7 +71,7 @@
    "metadata": {},
    "source": [
     "## Learning Goals\n",
-    "In this lab, you will work with some noisy data.  You will use ridge regression and simple linear regression to fit linear, high-order monomial and polynomial features to the dataset.  You will attempt to figure out what degree polynomial fits the dataset the best and ultimately use cross validation to determine the best polynomial order.  Finally, you will automate the cross validation process using `sklearn` in order to determine the best regularization paramter for the ridge regression analysis on your dataset.\n",
+    "In this lab, you will work with some noisy data.  You will use  simple linear and ridge regressions to fit linear, high-order polynomial features to the dataset.  You will attempt to figure out what degree polynomial fits the dataset the best and ultimately use cross validation to determine the best polynomial order.  Finally, you will automate the cross validation process using `sklearn` in order to determine the best regularization paramter for the ridge regression analysis on your dataset.\n",
     "\n",
     "By the end of this lab, you should:\n",
     "* Really understand regularized regression principles.\n",
@@ -81,7 +83,7 @@
     "  * Basic implementation details.\n",
     "* Be able to use `sklearn` objects to automate the cross validation process.\n",
     "\n",
-    "**This lab corresponds to lectures 5 and 6 and maps on to homework 4 (and beyond).**"
+    "**This lab corresponds to lectures 4 and 5 and maps on to homework 4 (and beyond).**"
    ]
   },
   {
@@ -181,7 +183,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Let's take a quick look at the datset.  We will plot the true function value and the population."
+    "Let's take a quick look at the dataset.  We will plot the true function value and the population."
    ]
   },
   {
@@ -251,7 +253,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Let's do one more look at our data to see which points we've selected."
+    "Let's take one more look at our data to see which points we've selected."
    ]
   },
   {
@@ -262,7 +264,7 @@
    },
    "outputs": [],
    "source": [
-    "fig, ax = plt.subplots(1,1, figsize=(8,6))\n",
+    "fig, ax = plt.subplots(1,1, figsize=(10,6))\n",
     "ax.plot(sample_df['x'], sample_df['y'], 's', alpha=0.4, ms=10, label=\"in-sample y (observed)\")\n",
     "ax.plot(x,y, '.', label=r'Population $y$')\n",
     "ax.plot(x,f, lw=4, label='True Response')\n",
@@ -312,8 +314,20 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Great!  At this point we've explored our data a little bit, selected a sample of the dataset, and done a train-test split on the sample dataset.\n",
-    "\n",
+    "Great!  At this point we've explored our data a little bit, selected a sample of the dataset, and done a train-test split on the sample dataset."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<hr style='height:2px'>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "Let's move on to the data analysis.  We'll begin with ridge regression.  In particular we'll do ridge regression on a single predictor and compare it with simple linear regression."
    ]
   },
@@ -379,11 +393,12 @@
     "    # fit the model\n",
     "    #your code here\n",
     "    \n",
-    "    # extract the beta1 and store\n",
+    "    # extract the beta1 and append\n",
     "    bootstrap_beta1s[cur_bootstrap_rep] = bootstrap_model.coef_[0]\n",
     "    \n",
-    "# visualize the results (ideally, include the 5th and 95th percentiles to give a 90% confidence interval, using\n",
-    "# numpy's percentile() function)\n",
+    "## display the results\n",
+    "\n",
+    "# calculate 5th and 95th percentiles\n",
     "#your code here"
    ]
   },
@@ -743,7 +758,7 @@
     "### Part 3 Recap\n",
     "We did a multilinear ridge regression on our dataset where the features were monomials.  We also assessed the impact of the regularization parameter on the solution.  \n",
     "\n",
-    "Now we're going to go back to simple linear regression for the moment to illustrate some of the ideas behind cross validation.  In particular, we will use simple linear regression where our features are polynomials of a particular order.  We would like to determine what order monomial best fits our dataset."
+    "Now we're going to go back to simple linear regression for the moment to illustrate some of the ideas behind cross validation.  In particular, we will use simple linear regression where our features are polynomials of a particular order.  We would like to determine what order polynomial best fits our dataset."
    ]
   },
   {
@@ -779,7 +794,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "d = 20 # Maximum monomial degree\n",
+    "d = 20 # Maximum polynomial degree\n",
     "degrees = range(0,d+1)"
    ]
   },
@@ -855,7 +870,7 @@
    "source": [
     "plt.plot(degrees, error_train, marker='o', label='train (in-sample)')\n",
     "plt.plot(degrees, error_test, marker='o', label='validation')\n",
-    "plt.axvline(bestd, 0,0.5, color='k', label=\"min validation set error at d={0}\".format(bestd), alpha=0.3)\n",
+    "plt.axvline(bestd, 0,10, color='k', label=\"min validation set error at d={0}\".format(bestd), alpha=0.3)\n",
     "plt.ylabel('mean squared error')\n",
     "plt.xlabel('degree')\n",
     "plt.legend(loc='best')\n",
@@ -1063,7 +1078,8 @@
     "plt.plot(degrees, mean_valid_errors, marker='^', label='CV Valid. error', alpha=0.9)\n",
     "\n",
     "# Try to represent the errors\n",
-    "plt.fill_between(degrees, mean_valid_errors-std_valid_errors, mean_valid_errors+std_valid_errors, color=c1, alpha=0.2)\n",
+    "plt.fill_between(degrees, (mean_valid_errors-std_valid_errors).clip(min=0.001), mean_valid_errors+std_valid_errors, color=c1, alpha=0.2)\n",
+    "\n",
     "\n",
     "plt.plot([mindeg], [err], 'o',  label='test set error')\n",
     "\n",
@@ -1210,7 +1226,7 @@
    "outputs": [],
    "source": [
     "fig, ax = plt.subplots(1,1, figsize=(10,6))\n",
-    "ax.plot(fit_lambdas, -fit_scores, ls=' ', marker='o')\n",
+    "ax.plot(fit_lambdas, -fit_scores, ls='-', marker='o')\n",
     "ax.set_xscale('log')\n",
     "ax.set_yscale('log')\n",
     "ax.set_xlabel('$\\lambda$')\n",
@@ -1341,7 +1357,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Make the final plot\n",
+    "# code provided from here on\n",
     "fig, axs = plt.subplots(1, 2, figsize=(12, 4))\n",
     "left = 0\n",
     "right = 1\n",
