Fixed path to figure in Exercise 2.

--- a/Labs/Lab4/Lab4.ipynb
+++ b/Labs/Lab4/Lab4.ipynb
@@ -572,7 +572,7 @@
     "What happens for very large $\\lambda$ (e.g. $\\lambda \\to \\infty$)?\n",
     "\n",
     "Your plot should look something like the following plot (doesn't have to be exact):\n",
-    "![](ridge_lambda.png)"
+    "![](images/ridge_lambda.png)"
    ]
   },
   {
