Fixed small typo.

--- a/Labs/Lab4/Lab4.ipynb
+++ b/Labs/Lab4/Lab4.ipynb
@@ -665,7 +665,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We now continue working with our data.  We write a function to make polynomial features of given degrees and we store the features in a dictionary. "
+    "We now continue working with our data."
    ]
   },
   {
