updated hw6 notebook

--- a/Homework/HW6/HW6.ipynb
+++ b/Homework/HW6/HW6.ipynb
@@ -6,7 +6,7 @@
    "source": [
     "# <img style=\"float: left; padding-right: 10px; width: 45px\" src=\"iacs.png\"> S-109A Introduction to Data Science: \n",
     "\n",
-    "## Homework 5: Ensemble Methods, and Neural Networks\n",
+    "## Homework 6: Ensemble Methods, and Neural Networks\n",
     "\n",
     "\n",
     "**Harvard University**<br/>\n",
@@ -509,7 +509,7 @@
     "\n",
     "**2.2** _Aggregate_ all 25 _bootstrapped_ models to get a combined prediction for each training and test point: predict a 1 if and only if a majority of the 25 models predict that example to be from class 1. Verify that this bagging model scores either 67% or 68% accuracy on the test set.\n",
     "\n",
-    "**2.3** We want to know how the number of bootstraps affects our bagging ensemble's performance. Use the `sequential_prediction` function to get the model's accuracy score when using only 1,2,3,4,... of the bootstrapped models. Make a plot of training and test set accuracy as a function of number of bootstraps.\n",
+    "**2.3** We want to know how the number of bootstraps affects our bagging ensemble's performance. Use the `running_predictions` function to get the model's accuracy score when using only 1,2,3,4,... of the bootstrapped models. Make a plot of training and test set accuracy as a function of number of bootstraps.\n",
     "\n",
     "**2.4** Analyze the graph from 2.3 and discuss the effect of adding more bootstrapped models to the ensemble. What number of trees would you use in a production model to be cost-effective?\n",
     "\n",
@@ -572,7 +572,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**2.2** _Aggregate_ all 25 _bootstrapped_ models to get a single meta-prediction for each training and test point: predict a 1 if and only if the average of the 25 models' probability estimates for that point is above .5. Verify that this bagging model scores around 68% classification accuracy on the test set."
+    "**2.2** _Aggregate_ all 25 _bootstrapped_ models to get a combined prediction for each training and test point: predict a 1 if and only if a majority of the 25 models predict that example to be from class 1. Verify that this bagging model scores either 67% or 68% accuracy on the test set."
    ]
   },
   {
@@ -588,7 +588,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**2.3** We want to know how the number of bootstraps affects our bagging ensemble's performance. Use the `sequential_prediction` function to get the model's accuracy score when using only 1,2,3,4,... of the bootstrapped models. Make a plot of training and test set accuracy as a function of number of bootstraps."
+    "**2.3** We want to know how the number of bootstraps affects our bagging ensemble's performance. Use the `running_predictions` function to get the model's accuracy score when using only 1,2,3,4,... of the bootstrapped models. Make a plot of training and test set accuracy as a function of number of bootstraps."
    ]
   },
   {
@@ -629,7 +629,7 @@
     "<div class='exercise'> Question 3</div>\n",
     "**3.1** Fit a `RandomForestClassifier` to the original `X_train` data using 25 trees and a depth of 5. Comment on the model's test performance compared to the bagging model from Question 2.\n",
     "\n",
-    "**3.2** There are two improvements Random Forests make to the pure boosting approach in Question 2. What are they, and how do they help the random forest model do better than the pure bagging model?\n",
+    "**3.2** There are two improvements Random Forests make to the pure bagging approach in Question 2. What are they, and how do they help the random forest model do better than the pure bagging model?\n",
     "\n",
     "**Hints**:\n",
     " - Random forests do not combine each tree's prediction via a majority vote. What do they use instead?"
@@ -666,7 +666,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**3.2** There are two improvements Random Forests make to the pure boosting approach in Question 2. What are they, and how do they help the random forest model do better than the pure bagging model?"
+    "**3.2** There are two improvements Random Forests make to the pure bagging approach in Question 2. What are they, and how do they help the random forest model do better than the pure bagging model?"
    ]
   },
   {
