--- a/Lectures/Lecture2/grammarofdata.ipynb
+++ b/Lectures/Lecture2/grammarofdata.ipynb
@@ -132,6 +132,7 @@
    "cell_type": "code",
    "execution_count": 65,
    "metadata": {
+    "collapsed": false,
     "slideshow": {
      "slide_type": "slide"
     }
@@ -246,6 +247,7 @@
    "cell_type": "code",
    "execution_count": 68,
    "metadata": {
+    "collapsed": false,
     "slideshow": {
      "slide_type": "slide"
     }
@@ -282,6 +284,7 @@
    "cell_type": "code",
    "execution_count": 4,
    "metadata": {
+    "collapsed": false,
     "slideshow": {
      "slide_type": "fragment"
     }
@@ -322,6 +325,7 @@
    "cell_type": "code",
    "execution_count": 5,
    "metadata": {
+    "collapsed": false,
     "slideshow": {
      "slide_type": "fragment"
     }
@@ -374,6 +378,7 @@
    "cell_type": "code",
    "execution_count": 6,
    "metadata": {
+    "collapsed": false,
     "slideshow": {
      "slide_type": "fragment"
     }
@@ -426,6 +431,7 @@
    "cell_type": "code",
    "execution_count": 7,
    "metadata": {
+    "collapsed": false,
     "slideshow": {
      "slide_type": "fragment"
     }
@@ -594,6 +600,7 @@
    "cell_type": "code",
    "execution_count": 69,
    "metadata": {
+    "collapsed": false,
     "slideshow": {
      "slide_type": "fragment"
     }
@@ -632,6 +639,7 @@
    "cell_type": "code",
    "execution_count": 10,
    "metadata": {
+    "collapsed": false,
     "slideshow": {
      "slide_type": "fragment"
     }
@@ -661,6 +669,7 @@
    "cell_type": "code",
    "execution_count": 11,
    "metadata": {
+    "collapsed": false,
     "slideshow": {
      "slide_type": "fragment"
     }
@@ -761,6 +770,7 @@
    "cell_type": "code",
    "execution_count": 12,
    "metadata": {
+    "collapsed": false,
     "slideshow": {
      "slide_type": "subslide"
     }
@@ -789,6 +799,7 @@
    "cell_type": "code",
    "execution_count": 13,
    "metadata": {
+    "collapsed": false,
     "slideshow": {
      "slide_type": "fragment"
     }
@@ -813,6 +824,7 @@
    "cell_type": "code",
    "execution_count": 14,
    "metadata": {
+    "collapsed": false,
     "slideshow": {
      "slide_type": "fragment"
     }
@@ -877,6 +889,7 @@
    "cell_type": "code",
    "execution_count": 15,
    "metadata": {
+    "collapsed": false,
     "scrolled": true,
     "slideshow": {
      "slide_type": "slide"
@@ -1036,6 +1049,7 @@
    "cell_type": "code",
    "execution_count": 16,
    "metadata": {
+    "collapsed": false,
     "slideshow": {
      "slide_type": "slide"
     }
@@ -1184,6 +1198,7 @@
    "cell_type": "code",
    "execution_count": 17,
    "metadata": {
+    "collapsed": false,
     "slideshow": {
      "slide_type": "fragment"
     }
@@ -1340,6 +1355,7 @@
    "cell_type": "code",
    "execution_count": 18,
    "metadata": {
+    "collapsed": false,
     "slideshow": {
      "slide_type": "fragment"
     }
@@ -1436,6 +1452,7 @@
    "cell_type": "code",
    "execution_count": 19,
    "metadata": {
+    "collapsed": false,
     "slideshow": {
      "slide_type": "fragment"
     }
@@ -1583,6 +1600,7 @@
    "cell_type": "code",
    "execution_count": 71,
    "metadata": {
+    "collapsed": false,
     "slideshow": {
      "slide_type": "fragment"
     }
@@ -1618,6 +1636,7 @@
    "cell_type": "code",
    "execution_count": 21,
    "metadata": {
+    "collapsed": false,
     "slideshow": {
      "slide_type": "fragment"
     }
@@ -1653,6 +1672,7 @@
    "cell_type": "code",
    "execution_count": 22,
    "metadata": {
+    "collapsed": false,
     "slideshow": {
      "slide_type": "fragment"
     }
@@ -1688,6 +1708,7 @@
    "cell_type": "code",
    "execution_count": 23,
    "metadata": {
+    "collapsed": false,
     "slideshow": {
      "slide_type": "fragment"
     }
@@ -1820,6 +1841,7 @@
    "cell_type": "code",
    "execution_count": 24,
    "metadata": {
+    "collapsed": false,
     "slideshow": {
      "slide_type": "fragment"
     }
@@ -1952,6 +1974,7 @@
    "cell_type": "code",
    "execution_count": 25,
    "metadata": {
+    "collapsed": false,
     "slideshow": {
      "slide_type": "fragment"
     }
@@ -2039,6 +2062,7 @@
    "cell_type": "code",
    "execution_count": 26,
    "metadata": {
+    "collapsed": false,
     "slideshow": {
      "slide_type": "fragment"
     }
@@ -2186,6 +2210,7 @@
    "cell_type": "code",
    "execution_count": 27,
    "metadata": {
+    "collapsed": false,
     "slideshow": {
      "slide_type": "fragment"
     }
@@ -2378,6 +2403,7 @@
    "cell_type": "code",
    "execution_count": 28,
    "metadata": {
+    "collapsed": false,
     "slideshow": {
      "slide_type": "fragment"
     }
@@ -2600,6 +2626,7 @@
    "cell_type": "code",
    "execution_count": 29,
    "metadata": {
+    "collapsed": false,
     "scrolled": true,
     "slideshow": {
      "slide_type": "fragment"
@@ -2812,6 +2839,7 @@
    "cell_type": "code",
    "execution_count": 30,
    "metadata": {
+    "collapsed": false,
     "slideshow": {
      "slide_type": "skip"
     }
@@ -3743,6 +3771,7 @@
    "cell_type": "code",
    "execution_count": 31,
    "metadata": {
+    "collapsed": false,
     "slideshow": {
      "slide_type": "slide"
     }
@@ -3965,6 +3994,7 @@
    "cell_type": "code",
    "execution_count": 32,
    "metadata": {
+    "collapsed": false,
     "slideshow": {
      "slide_type": "fragment"
     }
@@ -4099,6 +4129,7 @@
    "cell_type": "code",
    "execution_count": 33,
    "metadata": {
+    "collapsed": false,
     "slideshow": {
      "slide_type": "fragment"
     }
@@ -4125,6 +4156,7 @@
    "cell_type": "code",
    "execution_count": 34,
    "metadata": {
+    "collapsed": false,
     "slideshow": {
      "slide_type": "fragment"
     }
@@ -4151,6 +4183,7 @@
    "cell_type": "code",
    "execution_count": 35,
    "metadata": {
+    "collapsed": false,
     "slideshow": {
      "slide_type": "slide"
     }
@@ -4276,6 +4309,7 @@
    "cell_type": "code",
    "execution_count": 76,
    "metadata": {
+    "collapsed": false,
     "slideshow": {
      "slide_type": "fragment"
     }
@@ -4511,6 +4545,7 @@
    "cell_type": "code",
    "execution_count": 77,
    "metadata": {
+    "collapsed": false,
     "slideshow": {
      "slide_type": "slide"
     }
@@ -4672,6 +4707,7 @@
    "cell_type": "code",
    "execution_count": 78,
    "metadata": {
+    "collapsed": false,
     "slideshow": {
      "slide_type": "fragment"
     }
@@ -4814,6 +4850,7 @@
    "cell_type": "code",
    "execution_count": 79,
    "metadata": {
+    "collapsed": false,
     "slideshow": {
      "slide_type": "fragment"
     }
@@ -4843,6 +4880,7 @@
    "cell_type": "code",
    "execution_count": 80,
    "metadata": {
+    "collapsed": false,
     "slideshow": {
      "slide_type": "subslide"
     }
@@ -4869,6 +4907,7 @@
    "cell_type": "code",
    "execution_count": 41,
    "metadata": {
+    "collapsed": false,
     "slideshow": {
      "slide_type": "subslide"
     }
@@ -5049,6 +5088,7 @@
    "cell_type": "code",
    "execution_count": 43,
    "metadata": {
+    "collapsed": false,
     "slideshow": {
      "slide_type": "fragment"
     }
@@ -5158,6 +5198,7 @@
    "cell_type": "code",
    "execution_count": 44,
    "metadata": {
+    "collapsed": false,
     "slideshow": {
      "slide_type": "subslide"
     }
@@ -5182,6 +5223,7 @@
    "cell_type": "code",
    "execution_count": 45,
    "metadata": {
+    "collapsed": false,
     "slideshow": {
      "slide_type": "subslide"
     }
@@ -5258,6 +5300,7 @@
    "cell_type": "code",
    "execution_count": 46,
    "metadata": {
+    "collapsed": false,
     "slideshow": {
      "slide_type": "subslide"
     }
@@ -5360,6 +5403,7 @@
    "cell_type": "code",
    "execution_count": 85,
    "metadata": {
+    "collapsed": true,
     "slideshow": {
      "slide_type": "fragment"
     }
@@ -5373,6 +5417,7 @@
    "cell_type": "code",
    "execution_count": 48,
    "metadata": {
+    "collapsed": false,
     "slideshow": {
      "slide_type": "fragment"
     }
@@ -5421,6 +5466,7 @@
    "cell_type": "code",
    "execution_count": 49,
    "metadata": {
+    "collapsed": false,
     "slideshow": {
      "slide_type": "fragment"
     }
@@ -6510,6 +6556,7 @@
    "cell_type": "code",
    "execution_count": 50,
    "metadata": {
+    "collapsed": false,
     "slideshow": {
      "slide_type": "subslide"
     }
@@ -6815,6 +6862,7 @@
    "cell_type": "code",
    "execution_count": 51,
    "metadata": {
+    "collapsed": false,
     "slideshow": {
      "slide_type": "subslide"
     }
@@ -6875,6 +6923,7 @@
    "cell_type": "code",
    "execution_count": 52,
    "metadata": {
+    "collapsed": false,
     "slideshow": {
      "slide_type": "subslide"
     }
@@ -6946,6 +6995,7 @@
    "cell_type": "code",
    "execution_count": 53,
    "metadata": {
+    "collapsed": false,
     "slideshow": {
      "slide_type": "fragment"
     }
@@ -7013,6 +7063,7 @@
    "cell_type": "code",
    "execution_count": 54,
    "metadata": {
+    "collapsed": false,
     "slideshow": {
      "slide_type": "fragment"
     }
@@ -7160,6 +7211,7 @@
    "cell_type": "code",
    "execution_count": 55,
    "metadata": {
+    "collapsed": false,
     "slideshow": {
      "slide_type": "fragment"
     }
@@ -7306,6 +7358,7 @@
    "cell_type": "code",
    "execution_count": 56,
    "metadata": {
+    "collapsed": false,
     "slideshow": {
      "slide_type": "subslide"
     }
@@ -7451,6 +7504,7 @@
    "cell_type": "code",
    "execution_count": 57,
    "metadata": {
+    "collapsed": false,
     "scrolled": true,
     "slideshow": {
      "slide_type": "subslide"
@@ -7600,6 +7654,7 @@
    "cell_type": "code",
    "execution_count": 58,
    "metadata": {
+    "collapsed": false,
     "slideshow": {
      "slide_type": "fragment"
     }
@@ -7823,6 +7878,7 @@
    "cell_type": "code",
    "execution_count": 59,
    "metadata": {
+    "collapsed": false,
     "slideshow": {
      "slide_type": "fragment"
     }
@@ -7953,6 +8009,7 @@
    "cell_type": "code",
    "execution_count": 60,
    "metadata": {
+    "collapsed": false,
     "slideshow": {
      "slide_type": "fragment"
     }
@@ -8067,6 +8124,7 @@
    "cell_type": "code",
    "execution_count": 62,
    "metadata": {
+    "collapsed": false,
     "slideshow": {
      "slide_type": "fragment"
     }
@@ -8230,6 +8288,7 @@
    "cell_type": "code",
    "execution_count": 63,
    "metadata": {
+    "collapsed": false,
     "slideshow": {
      "slide_type": "slide"
     }
@@ -8882,6 +8941,7 @@
    "cell_type": "code",
    "execution_count": 64,
    "metadata": {
+    "collapsed": false,
     "slideshow": {
      "slide_type": "subslide"
     }
@@ -9511,6 +9571,7 @@
    "cell_type": "code",
    "execution_count": 65,
    "metadata": {
+    "collapsed": false,
     "slideshow": {
      "slide_type": "subslide"
     }
@@ -10140,6 +10201,7 @@
    "cell_type": "code",
    "execution_count": 66,
    "metadata": {
+    "collapsed": false,
     "slideshow": {
      "slide_type": "subslide"
     }
@@ -10805,7 +10867,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.3"
+   "version": "3.5.0"
   },
   "livereveal": {
    "scroll": true,
